--- a/public/index.html
+++ b/public/index.html
@@ -244,7 +244,7 @@ xmlns="http://www.w3.org/2000/svg"
                 </div>
                 <div class="article-data">
                   <h2 class="article-title">
-                    🚀 From GCS to BigQuery: Building Scalable ETL Pipelines with Apache Airflow
+                    From GCS to BigQuery: Building Scalable ETL Pipelines with Apache Airflow 🧑‍💻
                   </h2>
                   <p class="article-excerpt">
                     A hands-on, real-world guide to building robust, scalable ETL pipelines with Apache Airflow, GCS, and BigQuery. Learn the tricks, the pitfalls, and the magic of orchestration.
